Added header search input and new project button with styles.
- Added a search input field to the header for enhanced project search functionality.
- Added a new project creation button for creating new projects
- Styled primary-input and button classes in input.css for consistent design and components.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
             </button>
           </div>
         </div>
+        <div class="flex items-center justify-between my-8 flex-wrap gap-4">
+          <input
+            type="search"
+            id="project-search-input"
+            placeholder="Search"
+            class="primary-input w-full min-[537px]:basis-[320px]"
+            aria-label="Search for projects"
+          />
+          <button
+            type="button"
+            id="create-project-button"
+            class="button primary-button flex w-full min-[537px]:w-fit items-center justify-center gap-2.5"
+            aria-label="Create a new project"
+          >
+            <i class="ph-bold ph-plus"></i>
+            New project
+          </button>
+        </div>
       </header>
     </div>
   </body>
