Enhance project filtering and search functionality with dynamic filter tabs and UI improvements
- Added dynamic filter tabs to enable filtering projects by status (All, At Risk, On Hold, etc.).
- Implemented the filterProjectsByStatus function to handle filtering logic based on selected status.
- Updated renderProjects and searchProjects to support filtered and searched project rendering.
- Added countFilteredProjects function to dynamically display project counts in each filter tab.
- Created renderFilterTabs function for rendering filter tabs with interactivity and styling.
- Updated the header with a scrollable navigation section for filter tabs.
- Styled the filter tabs with Tailwind CSS utilities, including active states and hover effects.
- Enhanced accessibility with ARIA attributes for the filter tabs navigation.

--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
             New project
           </button>
         </div>
-        <nav class="filter-tabs-nav overflow-x-auto pb-2">
+        <nav class="filter-tabs-nav overflow-x-auto pb-2" aria-label="Filter Tabs Navigation">
           <ul
             id="filter-tabs-list"
             class="flex items-center gap-6 whitespace-nowrap"
+            role="tablist"
           ></ul>
-        </nav>
+        </nav>        
       </header>
       <main>
         <div class="data-table-container min-w-full rounded-md overflow-x-scroll max-h-[calc(100vh-286px)] min-[537px]:max-h-[calc(100vh-270px)]">
