Implement pagination, filter, and search functionality with project rendering updates in scripts.js
- Added pagination functionality in scripts.js for navigating between pages and selecting the number of rows per page.
- Implemented updatePageInfo function to update page information dynamically and manage disabled states for pagination buttons.
- Integrated localStorage to persist the selected rows per page across sessions.
- Enhanced project rendering logic to handle pagination by slicing the filtered project array based on the current page and rows per page.
- Updated the renderFilterTabs function to include proper filter handling with pagination and search results.
- Modified searchProjects to reset the pagination to the first page when performing a search and apply the selected filter.

--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
                 name="rows-per-page"
                 id="rows-per-page-select"
               >
-                <option tes value="5"">5</option>
-                <option tes value="10">10</option>
-                <option tes value="15">15</option>
-                <option tes value="20">20</option>
-                <option tes value="30">30</option>
-                <option tes value="40">40</option>
-                <option tes value="50">50</option>
+                <option value="5"">5</option>
+                <option value="10">10</option>
+                <option value="15">15</option>
+                <option value="20">20</option>
+                <option value="30">30</option>
+                <option value="40">40</option>
+                <option value="50">50</option>
+                <option value="all">All</option>
               </select>
             </div>
             <div class="flex items-center gap-2">
