Added min-h-dvh class for setting minimum height relative to the viewport height.
The "min-h-dvh" class was added to the element to set its minimum height based on the dynamic viewport height (dvh), improving responsiveness on various screen sizes.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body class="font-inter bg-gray-100 p-0 min-[537px]:p-4">
     <div
-      class="bg-white min-w-full min-h-full rounded-none min-[537px]:rounded-xl py-4 px-5"
+      class="bg-white min-w-full min-h-dvh rounded-none min-[537px]:rounded-xl py-4 px-5"
     >
       <header>
         <div class="flex items-center justify-between">
@@ -84,7 +84,7 @@
           ></ul>
         </nav>        
       </header>
-      <main>
+      <main class="">
         <div class="data-table-container min-w-full rounded-md overflow-x-scroll max-h-[calc(100vh-286px)] min-[537px]:max-h-[calc(100vh-270px)]">
           <table class="table-auto w-full overflow-x-auto border-collapse relative">
             <tbody id="projects-wrapper"></tbody>
