--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body class="font-inter bg-gray-100 p-0 min-[537px]:p-4">
     <div
-      class="bg-white min-w-full min-h-dvh rounded-none min-[537px]:rounded-xl py-4 px-5"
+      class="bg-white min-w-full min-h-dvh min-[537px]:min-h-fit rounded-none min-[537px]:rounded-xl py-4 px-5 "
     >
       <header>
         <div class="flex items-center justify-between">
