"Implemented dynamic project data handling, sorting, filtering, rendering, and enhanced UI components for improved functionality and user experience.
- The structure of the default project data was improved, including fields such as resources, manager, status, and timeline.
- Added dynamic functions to create table cells, such as project ID, manager name with an image or initials, last updated, resources, and timeline.
- A flexible function was added to compare string, numeric, date, or array values for sorting.
- Logic for sorting projects dynamically by column when clicking the buttons, with ascending/descending direction control.
- Logic was added to filter projects based on status and search input, with sorting based on the selected field and order.
- Improved rendering of projects in the interface, supporting dynamic page display with the current page and row count, along with a message when no projects are found.
- added several functions to generate dynamic table cells for different project attributes. These include:
- createProjectIdCell(projectId): Generates a cell for the project ID.
- createProjectManagerCell(projectManager): Generates a cell for the project manager, including a profile image or initials if the image is missing.
- createProjectLastUpdatedCell(lastUpdated): Generates a cell displaying the last updated date with a timeline icon.
-
createProjectResourcesCell(projectResources): Generates a cell showing the number of resources in the project.
-createProjectTimeLineCell(projectTimeLine): Generates a cell displaying the project timeline with start and end dates.

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                   <button
                     type="button"
                     class="sort-button"
-                    data-sort-key="manger"
+                    data-sort-key="manager"
                     data-active="false"
                     data-order="none"
-                    aria-label="Sort by manger"
+                    aria-label="Sort by manager"
                     aria-sort="none"
                   >
                     Pm<i class="ph ph-arrow-circle-up text-lg"></i>
@@ -171,7 +171,7 @@
                   <button
                     type="button"
                     class="sort-button"
-                    data-sort-key="timeline"
+                    data-sort-key="timeLine"
                     data-active="false"
                     data-order="none"
                     aria-label="Sort by timeline"
@@ -218,7 +218,6 @@
                 <option value="30">30</option>
                 <option value="40">40</option>
                 <option value="50">50</option>
-                <option value="all">All</option>
               </select>
             </div>
             <div class="flex items-center gap-2">
